--- a/Home.html
+++ b/Home.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <style>
+        .navigationbar {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.navigationbar a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navigationbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.navigationbar a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+    </style>
 </head>
 <body>
-    <h1>Welcome to the Home Page</h1>
-    <p>This is the main landing page of the website.</p>
+    <div class="navigationbar">
+  <a class="active" href="#home">Home</a>
+  <a href="#Shop">Shop</a>
+  <a href="#Contact">Contact</a>
+  <a href="#About Us">About Us</a>
+</div>
 </body>
 </html>
