--- a/About Us.html
+++ b/About Us.html
@@ -32,10 +32,10 @@
 </head>
 <body>
     <div class="navigationbar">
-  <a class="active" href="Home.html">Home</a>
+  <a href="Home.html">Home</a>
   <a href="Shop.html">Shop</a>
   <a href="Contact.html">Contact</a>
-  <a href="About Us.html">About Us</a>
+  <a class="active" href="About Us.html">About Us</a>
 </div>
 </body>
 </html>
