--- a/Contact.html
+++ b/Contact.html
@@ -32,9 +32,9 @@
 </head>
 <body>
     <div class="navigationbar">
-  <a class="active" href="Home.html">Home</a>
+  <a href="Home.html">Home</a>
   <a href="Shop.html">Shop</a>
-  <a href="Contact.html">Contact</a>
+  <a class="active" href="Contact.html">Contact</a>
   <a href="About Us.html">About Us</a>
 </div>
 </body>
