--- a/Contact.html
+++ b/Contact.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <style>
+        body{
+          padding: 0px 0px 0px 0px;
+          margin: 0px 0px 0px 0px;
+        }
         .navigationbar {
-  overflow: hidden;
-  background-color: #333;
-}
+      background-color: rgb(73, 73, 192);
+      overflow: hidden;
+    }
 
 .navigationbar a {
   float: left;
@@ -20,13 +24,13 @@
 }
 
 .navigationbar a:hover {
-  background-color: #ddd;
+  background-color: rgb(116, 116, 158);
   color: black;
 }
 
 .navigationbar a.active {
-  background-color: #04AA6D;
-  color: white;
+  background-color: #0ba1cf;
+  color: black;
 }
     </style>
 </head>
