--- a/Home.html
+++ b/Home.html
@@ -8,19 +8,26 @@
         body{
           padding: 0px;
           margin: 0px;
+          background: #330000;
         }
         .container {
           display: flex;
           max-width: 1200px;
           margin: 30px auto;
-          gap: 20px;
+          gap: 0px;
+          padding: 0;
         }
         .left-section {
           flex: 2;
-          background: #fff;
+          background: transparent;
           display: flex;
           flex-direction: column;
           justify-content: flex-start;
+          width: 100%;
+          height: auto;
+          padding: 0;
+          margin: 0;
+          position: relative;
         }
         .left-section img {
           width: 100%;
@@ -28,17 +35,31 @@
           display: block;
         }
         .left-section .product-text {
-          padding: 20px 10px 10px 10px;
+          position: absolute;
+          left: 0;
+          bottom: 18%;
+          width: auto;
+          padding: 20px 10px 10px 20px;
+         font-size: 40px;
+         background-color: black;
+         border-radius: 0px 20px 20px 0px;
         }
 
         .product-desc {
-          color: #222;
+          color: whitesmoke;
+        }       
+        .product-title {
+          color: whitesmoke;
         }
         .right-section {
           flex: 1;
           display: flex;
           flex-direction: column;
-          gap: 20px;
+          gap: 0px;
+          width: 100%;
+          padding: 0;
+          margin: 0;
+
         }
         .right-section img {
           width: 100%;
@@ -66,7 +87,7 @@
 
     <div class="container">
       <div class="left-section">
-        <img src="sneaker.jpg" alt="SneakerSale">
+        <img src="sneaker.png" alt="SneakerSale">
         <div class="product-text">
           <div class="product-title">Sneaker White</div>
           <div class="product-desc">Limited Edition</div>
@@ -74,8 +95,10 @@
       </div>
       <div class="right-section">
         <img src="15.png" alt="Gift Guide">
-        <img src="sneakerbundle.jpg" alt="Christmas Sale">
-       
+        <div style="position: relative; width: 100%;">
+          <img src="sneakerbundle.png" alt="Christmas Sale" style="width: 100%; display: block;">
+          <div style="position: absolute; top: 15px; left: 15px; color: #fff; font-size: 28px; background: rgba(0,0,0,0.5); padding: 6px 16px; border-radius: 8px;">1+1 bundle</div>
+        </div>
       </div>
     </div>
 
