fixed register.html forgot Home.html

--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="home-button">
-        <a href="index.html">Home</a>
+        <a href="Home.html">Home</a>
     </div>
     
 
