fixed login.html forgot Home.html as well

--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 
 
     <div class="home-button">
-        <a href="index.html">Home</a>
+        <a href="Home.html">Home</a>
     </div>
     
     <section class="login-section">
