folder STYLE created with all images and files like style.css moved there and also edited all directories and other stuff for those files

--- a/Home.html
+++ b/Home.html
@@ -150,7 +150,7 @@
 
     <input type="checkbox" id="menu-toggle">
     <label for="menu-toggle" class="mbl">&#9776;</label>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="STYLE/style.css">
 
     <ul class="nav-links">
         <li><a href="Home.html">Home</a></li>
@@ -161,16 +161,16 @@
 
     <div class="container">
       <div class="left-section">
-        <img src="sneaker.png" alt="SneakerSale">
+        <img src="STYLE/sneaker.png" alt="SneakerSale">
         <div class="product-text">
           <div class="product-title">Sneaker Red</div>
           <div class="product-desc">Limited Edition</div>
         </div>
       </div>
       <div class="right-section">
-        <img src="15.png" alt="Gift Guide">
+        <img src="STYLE/15.png" alt="Gift Guide">
         <div style="position: relative; width: 100%;">
-          <img src="sneakerbundle.png" alt="Christmas Sale" style="width: 100%; display: block;">
+          <img src="STYLE/sneakerbundle.png" alt="Christmas Sale" style="width: 100%; display: block;">
           <div style="position: absolute; top: 15px; left: 15px; color: #fff; font-size: 28px; background: rgba(0,0,0,0.5); padding: 6px 16px; border-radius: 8px;">1+1 bundle</div>
         </div>
       </div>
@@ -183,49 +183,49 @@
         <button id="prevBtn" onclick="prevShoes()" style="background: #222; color: #fff; border: 1px solid #888; border-radius: 6px; padding: 0 18px; width: auto; height: 40px; font-size: 40px; margin-right: 12px; ">&#8592;</button>
         <div class="top-sellers-row">
           <div class="shoe-card">
-            <a href="#shoe1"><img src="shoe.png" alt="Shoe Example"></a>
+            <a href="#shoe1"><img src="STYLE/shoe.png" alt="Shoe Example"></a>
             <div class="shoe-brand">Shoe Comp</div>
             <div class="shoe-name">Shoe Example</div>
             <div class="shoe-price">$120</div>
           </div>
           <div class="shoe-card">
-            <a href="#shoe2"><img src="shoe.png" alt="Shoe Example"></a>
+            <a href="#shoe2"><img src="STYLE/shoe.png" alt="Shoe Example"></a>
             <div class="shoe-brand">Shoe Comp</div>
             <div class="shoe-name">Shoe Example</div>
             <div class="shoe-price">$140</div>
           </div>
           <div class="shoe-card">
-            <a href="#shoe3"><img src="shoe.png" alt="Shoe Example"></a>
+            <a href="#shoe3"><img src="STYLE/shoe.png" alt="Shoe Example"></a>
             <div class="shoe-brand">Shoe Comp</div>
             <div class="shoe-name">Shoe Example</div>
             <div class="shoe-price">$110</div>
           </div>
           <div class="shoe-card">
-            <a href="#shoe4"><img src="shoe.png" alt="Shoe Example"></a>
+            <a href="#shoe4"><img src="STYLE/shoe.png" alt="Shoe Example"></a>
             <div class="shoe-brand">Shoe Comp</div>
             <div class="shoe-name">Shoe Example</div>
             <div class="shoe-price">$100</div>
           </div>
           <div class="shoe-card">
-            <a href="#shoe5"><img src="shoe.png" alt="Shoe Example"></a>
+            <a href="#shoe5"><img src="STYLE/shoe.png" alt="Shoe Example"></a>
             <div class="shoe-brand">Shoe Comp</div>
             <div class="shoe-name">Shoe Example</div>
             <div class="shoe-price">$95</div>
           </div>
           <div class="shoe-card">
-            <a href="#shoe6"><img src="shoe.png" alt="Shoe Example"></a>
+            <a href="#shoe6"><img src="STYLE/shoe.png" alt="Shoe Example"></a>
             <div class="shoe-brand">Shoe Comp</div>
             <div class="shoe-name">Shoe Example</div>
             <div class="shoe-price">$80</div>
           </div>
           <div class="shoe-card">
-            <a href="#shoe7"><img src="shoe.png" alt="Shoe Example"></a>
+            <a href="#shoe7"><img src="STYLE/shoe.png" alt="Shoe Example"></a>
             <div class="shoe-brand">Shoe Comp</div>
             <div class="shoe-name">Shoe Example</div>
             <div class="shoe-price">$85</div>
           </div>
           <div class="shoe-card">
-            <a href="#shoe8"><img src="shoe.png" alt="Shoe Example"></a>
+            <a href="#shoe8"><img src="STYLE/shoe.png" alt="Shoe Example"></a>
             <div class="shoe-brand">Shoe Comp</div>
             <div class="shoe-name">Shoe Example</div>
             <div class="shoe-price">$90</div>
