--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Sneaker Shop</title>
-    <link rel="stylesheet" href="about1.css">
+    <link rel="stylesheet" href="STYLE/about1.css">
 </head>
 <body>
 
