--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Sneaker Shop</title>
-    <link rel="stylesheet" href="login1.css">
+    <link rel="stylesheet" href="STYLE/login1.css">
 </head>
 <body>
 
