--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Sneaker Shop</title>
-    <link rel="stylesheet" href="register1.css">
+    <link rel="stylesheet" href="STYLE/register1.css">
 </head>
 <body>
 
